envoyfilter-teaching/envoyfilter/buffer_filter/ef-buffer_filter-route.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: buffer-2
spec:
  workloadSelector:
    labels:
      istio: ingressgateway
  configPatches:
  - applyTo: NETWORK_FILTER
    match:
      context: GATEWAY
      listener:
        portNumber: 8080
        filterChain:
          filter:
            name: "envoy.filters.network.http_connection_manager"
    patch:
      operation: MERGE
      value:
              name: envoy.filters.network.http_connection_manager
              typedConfig:
                '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                route_config:
                  name: test
                  virtual_hosts:
                  - name: test
                    domains:
                    - "*"
                    routes:
                    - name: testroute
                      match: 
                        path: /productpage
                        case_sensitive: false
                      typed_per_filter_config:
                        envoy.filters.http.buffer:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.buffer.v3.BufferPerRoute
                          buffer:
                            max_request_bytes:  102400
                          disabled: false
                      route:
                        cluster: outbound|9080||productpage.istio.svc.cluster.local
